--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ MONGO_URL = mongodb+srv://Headphone_Store:headphon123456@cluster0.jmaxqer.mongod
 ACCESS_TOKEN_SECRET = accesstoken
 REFRESH_TOKEN_SECRET = refreshtoken
 PORT = 3000
+EMAIL_PASSWORD=gbdgucjjokticlen
+EMAIL_USER = leronalluom@gmail.com
+GEMINI_API_KEY = AIzaSyBj-jwATumcuKsU78lEQCFlDnJYAq9wZ4I
