--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "mongoose": "^8.15.2",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10",
+    "redis": "^5.7.0",
     "socket.io": "^4.8.1"
   },
   "type": "module"
