--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-CLIENT_URL = https://soundorastore.vercel.app/
+CLIENT_URL = https://soundorastore.vercel.app
 MONGO_URL = mongodb+srv://Headphone_Store:headphon123456@cluster0.jmaxqer.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 ACCESS_TOKEN_SECRET = accesstoken
 REFRESH_TOKEN_SECRET = refreshtoken
